--- a/src/components/Section1/index.css
+++ b/src/components/Section1/index.css
@@ -68,20 +68,20 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
     padding: 20px 0px;
   }
   .a h2 {
-    font-size: 3vw;
+    font-size: 3.3vw;
     text-align: center;
     font-family: "roboto";
     font-weight: 400;
     color: gray;
   }
   .a h1 {
-    font-size: 5.8vw;
+    font-size: 6vw;
     font-family: "Roboto";
     font-weight: 800;
     text-align: center;
@@ -95,7 +95,7 @@
     font-family: "roboto";
     line-height: 5vw;
     font-weight: 500;
-    font-size: 7vw;
+    font-size: 7.2vw;
     line-height: 40px;
     color: white;
     filter: drop-shadow(0 0 0.03rem rgb(2, 2, 2));
@@ -103,8 +103,11 @@
   .m1 {
     text-align: center;
     font-size: 2vw;
-    padding: 20px 5px;
+    padding: 10px 5px;
     cursor: pointer;
     border-radius: 1vw;
+  }
+  .m-s {
+   margin-left: auto;
   }
 }
