--- a/src/components/connect/index.css
+++ b/src/components/connect/index.css
@@ -93,12 +93,12 @@ footer h4 {
 @media screen and (max-width: 470px) {
   footer {
     width: 100%;
-    height: 20vh;
+    height: 30vh;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     flex-direction: column;
-    margin-top: 15px;
+    margin-top: 20px;
   }
   footer h5 {
     font-size: 2vw;
