--- a/src/components/Section1/index.css
+++ b/src/components/Section1/index.css
@@ -68,7 +68,7 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     padding: 20px 0px;
@@ -95,19 +95,19 @@
     font-family: "roboto";
     line-height: 5vw;
     font-weight: 500;
-    font-size: 7.2vw;
+    font-size: 7vw;
     line-height: 40px;
     color: white;
     filter: drop-shadow(0 0 0.03rem rgb(2, 2, 2));
   }
   .m1 {
     text-align: center;
-    font-size: 2vw;
+    font-size: 2.5vw;
     padding: 10px 5px;
     cursor: pointer;
     border-radius: 1vw;
   }
   .m-s {
-   margin-left: auto;
+    margin-left: 15px;
   }
 }
