--- a/src/components/Skills/index.css
+++ b/src/components/Skills/index.css
@@ -91,7 +91,7 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
   }
@@ -108,8 +108,9 @@
     letter-spacing: 0.03vw;
   }
   .section3 .box {
+    margin-top: -30px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
